# sudoku_rust

./: Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: example2.txt  example5.txt  problem_10.json  problem_101.json  problem_102.json  problem_103.json  problem_105.json  problem_106.json  problem_107.json  problem_109.json  problem_11.json  problem_110.json  problem_111.json  problem_112.json  problem_113.json  problem_114.json  problem_115.json  problem_116.json  problem_117.json  problem_118.json  problem_119.json  problem_12.json  problem_120.json  problem_121.json  problem_123.json  problem_124.json  problem_125.json  problem_126.json  problem_127.json  problem_128.json  problem_13.json  problem_130.json  problem_131.json  problem_132.json  problem_133.json  problem_134.json  problem_135.json  problem_136.json  problem_138.json  problem_139.json  (+400 more)
src/: main.rs  sudoku.rs
src/data/: example1.txt  example3.txt  example4.txt  example6.txt  example7.txt  example8.txt  problem_1.json  problem_100.json  problem_104.json  problem_108.json  problem_122.json  problem_129.json  problem_137.json  problem_146.json  problem_161.json  problem_163.json  problem_167.json  problem_178.json  problem_190.json  problem_195.json  problem_2.json  problem_200.json  problem_202.json  problem_207.json  problem_214.json  problem_218.json  problem_226.json  problem_227.json  problem_243.json  problem_244.json  problem_247.json  problem_256.json  problem_265.json  problem_280.json  problem_286.json  problem_287.json  problem_290.json  problem_3.json  problem_302.json  (+29 more)
(+3 files in other folders)
