[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.10.0"
array-macro = "2.1.5"
rand = "0.8.5"
rayon = "1.5.3"
reqwest = {version = "0.11.18", features = ["blocking"]}
serde_json = "1.0.100"
serde = { version = "1.0.171", features = [] }
glob = "0.3.1"
